<resources>
    <string name="app_name">#Translate App</string>
    <string name="in_app_name">Translate App</string>
    <string name="translation_in">Translation in</string>

    <string name="facebook_app_id">2956017244662037</string>
    <string name="firebase_id">1:741192997417:android:bcfc00fadddf22ae295a38</string>
    <string name="adjust_id">r34cy5hqllvk</string>

    <string name="in_app_purchases_key">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAvryKDvvaQn0upUaDTVYdbp4Ih0QZIKXKLb1FH6061zNNYZa4608rzYZkCg7LevtMUeBKGkpihBhEmeTurMKeR9W9v6uxMdnXJLM6PBUADoYUFi6u4C3ud/wmVLl6lMgayB7oxgmyvj5RyC0rhaAEo1wL4ZjBMuzdkl1rSBQ8aikI0QjZbaNR6VA+OnFLYNUxSAVPDMA2g5J1GO1XtQCRCGeB87EKUUhst+Xe2xrNJDIfP7sqVgtFJLmHjBg+MukN8km0yyF60a+DvhP8rlBv1ESRGutyIIDIrANT8X+rMPBnj+Sm7kc6gbXFzIrxldn6VgZFlUfAQnMdX6cy4Wd+vQIDAQAB</string>
    <string name="title_activity_nav3">Nav3Activity</string>
    <string name="term_of_services_and_privacy_policy"><u>Privacy Policy</u></string>
    <string name="ad_attribution">Advertisement</string>
    <string name="ad_sponsored">Sponsored</string>
    <string name="ad_sponsored_list">AD</string>
    <string name="share_using">App Link</string>
    <string name="tts_error_device">This languages currently does not support text to speech</string>
    <string name="translation_history">Translation History</string>
    <string name="bookmarked_list">Bookmarked List</string>
    <string name="rate_us">Rate Us!</string>
    <string name="share_with_friends">Share with friends</string>
    <string name="clear_translation">Clear Translation</string>
    <string name="clear_conversation">Clear Conversation</string>
    <string name="remove_ads">Remove Ads</string>
    <string name="enter_text_to_translate">Enter text to Translate</string>
    <string name="pro">PRO</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_use">Terms of use</string>
    <string name="stt_error_device">This device does not support Voice Recognition.</string>
    <string name="subscription_renew">An Auto-renewable Subscription will be activated at the end of the selected period.</string>

    <string name="heading_unlimited_translation">Unlimited Translation</string>
    <string name="heading_unlimited_translation_sub">Unlimited times of all translation</string>

    <string name="heading_camera_translation">Image Translation Languages</string>
    <string name="heading_camera_translation_sub">Support 90+ languages for image translation</string>
    <string name="heading_remove_ads_sub">No more disturbing ads</string>

    <string name="heading_subscription_monthly">Monthly</string>
    <string name="heading_subscription_yearly">Yearly</string>
    <string name="heading_subscription_life_time">Lifetime</string>
    <string name="free_trial_three_days">3-day \n Free trial</string>
    <string name="subscribe_now">Subscribe Now</string>

    <string name="cancel_any_time">You can cancel anytime</string>
    <string name="language_translator">Language Translator</string>
    <string name="translate_all">Translate All</string>
    <string name="continue_trial">Continue Trial</string>
    <string name="subscribe_monthly">Remove Ads - $12</string>
    <string name="full_access">Get Full Access</string>
    <string name="ocr_open_camera_fail">Failed to turn on the camera, please try again</string>
    <string name="terms_of_services"><u>Terms of Services</u></string>
    <string name="btn_later"><u>Later</u></string>
    <string name="splash_privacy">By moving forward means agree with our <font color='#3a9be8'><u><b>Privacy Policy</b></u></font></string>

    <string name="drawer_title">Translate Language</string>
    <string name="drawer_nav_rate_us">Rate Us</string>
    <string name="drawer_nav_settings">Settings</string>
    <string name="drawer_nav_saved_chat">Saved Chat</string>
    <string name="drawer_nav_bookmark">Bookmarked List</string>
    <string name="drawer_nav_translation">Translation History</string>
    <string name="drawer_nav_share">Share With Friends</string>
    <string name="drawer_nav_language">Language Options</string>

    <string name="package_install">You need to install Google App to use this feature. Please install and try again.</string>
    <string name="menu_share">Share</string>
    <string name="menu_copy">Copy Text</string>
    <string name="menu_reverse">Reverse</string>
    <string name="menu_full_screen">Full Screen</string>
    <string name="text_copied">Text copied to clipboard</string>
    <string name="label_set_conversation_name">Set Conversation Name</string>
    <string name="action_save">Save</string>
    <string name="label_exit_cancel">Cancel</string>
    <string name="message_set_name">Set conversation name</string>
    <string name="label_saved_chat">Saved Chat</string>
    <string name="label_total_chats">Total</string>
    <string name="label_selected_total">Selected</string>
    <string name="label_conversation">Conversation</string>
    <string name="label_app_name">Language Translator</string>
    <string name="intro_welcome">Welcome to Language Translator</string>
    <string name="intro_text_one">Communicate in Multiple Languages</string>
    <string name="intro_text_one_sub">So cool for conversation and translation, No more  language barriers.</string>
    <string name="intro_text_second">Effective Conversation</string>
    <string name="intro_text_second_sub">Have meaningful conversation &amp; talk with foreigners so easy now.</string>
    <string name="intro_text_third">Learn New Words</string>
    <string name="intro_text_third_sub">Save words into favourites and construct your own dictionary for definite purposes.</string>
    <string name="start_btn">Let\'s Start</string>
    <string name="label_ads_free">Ads Free</string>
    <string name="label_feature_remove_ads">You can Remove Ads by Purchasing Version of App (Life time + Unlock Pro Version)</string>
    <string name="drawer_nav_clip">Clipboard Translation</string>
    <string name="drawer_nav_clip_auto">Auto Clipboard Translation</string>
    <string name="label_clip_clear">Clear</string>
    <string name="mpopUp">mPopup</string>
    <string name="tarLang">French</string>
    <string name="check_network">Check Network</string>
    <string name="enabled_copy_to_translate">Clipboard Service to Copy data is on</string>
    <string name="text_notification">Translate All Notification</string>
    <string name="copy_valid_text">Please copy valid text</string>
    <string name="copy_other_data">Please copy another data</string>
    <string name="lang_not_detected">Language not detected</string>
    <string name="capture_clear_image">Capture Clear Image</string>
    <string name="menu_detect_word">Detect Word</string>
    <string name="menu_detect_paragraph">Detect Paragraph</string>
    <string name="translate">Translate</string>
    <string name="fictional_lang">Fictional Languages</string>
    <string name="phrasebook">Phrasebook</string>


    <string name="step1_title">Translate Everything</string>
    <string name="step2_title">Fictional Language</string>
    <string name="step3_title">Lost In a Country?</string>
    <string name="step1_message">Use photo, voice or text to translate anything</string>
    <string name="step2_message">Translate to fictional voices from your favorite characters</string>
    <string name="step3_message">Don’t worry, use our phrasebook to get around anywhere in the world</string>
    <string name="payment_card_title_price" translatable="false">Try 3 days free. then %1s / %2s. Cancel anytime.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="price">Enjoy a <b>3 Day Free Trial - Then 6.49€ / montly</b></string>
    <string name="year_price">Enjoy a <b>3 Day Free Trial - Then 6.49€ / Year</b></string>
    <string name="weekly_price">Enjoy a <b>3 Day Free Trial - Then 1.99€ / Week</b></string>
    <string name="u_continue_with_ads_u"><u>Continue without subscription</u></string>
    <string name="purchase_reason_1">· Speach translation</string>
    <string name="purchase_reason_2">· Translate text from any image or photo</string>
    <string name="purchase_reason_3">· Unlock unlimited translations</string>
    <string name="subscribe">Subscribe</string>
    <string name="continue_now">Continue Now</string>
    <string name="try_now_free">Try now for free</string>
    <string name="gain_access">Access<br />unlimited translations </string>
    <string name="gain">Access</string>
    <string name="access">unlimited translations</string>
    <string name="unlock_the_ad_free_experience">Unlock the ad free experience</string>
    <string name="privacy_policies">Privacy Policies</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="fb_login_protocol_scheme">fb2956017244662037</string>


    <string name="essentials">Eessentials</string>
    <string name="whiletravelling">While Travelling</string>
    <string name="medical">Help / Medical</string>
    <string name="hotel">At the Hotel</string>
    <string name="restaurant">At the Restaurant</string>
    <string name="bar">At the Bar</string>
    <string name="store">At the Store</string>
    <string name="work">At Work</string>
    <string name="time">Time, Date, Number</string>
    <string name="be_our_special_member">Be our special member</string>
    <string name="get_premium">Get Premium</string>
    <string name="unlock_all_features">Unlock all features</string>
    <string name="enjoy_the_full_experience">Enjoy the full experience</string>
    <string name="try_now_for_free">Try now for free</string>
    <string name="get_rid_of_ads">Get rid of ads</string>
    <string name="don_t_let_ads_bother_you">Don\'t let ads bother you</string>
    <string name="if_you_enjoy_using_our_app_nplease_rate_us">If you enjoy using our app,\nPlease rate us.</string>
    <string name="we_are_trying_our_best_to_improve">We are trying our best to improve!</string>
    <string name="like_our_app">Like our App</string>

    <string name="read_phone_State">Read Phone State</string>
    <string name="read_phone_state_body">To be able to use translation\ntools after calls.</string>
    <string name="draw_over_other_apps">Draw over other apps</string>
    <string name="draw_over_other_apps_body">To show on top of other\napps our Speak &amp; Translate\npro features.</string>
    <string name="by_continuing">By continuing, you accept and approve the term of use and the privacy policy.</string>
    <string name="conti">Continue</string>
    <string name="caller_setting">Caller Settings</string>
    <string name="skip">Skip</string>
    <string name="adapty_sdk_key">public_live_Sb5gzmxU.PWgdpoC8D9IOqo9jtuaq</string>
    <string name="internet_not_connected">Internet not connected</string>


</resources>
