<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/bg_dlgs_root">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_label_set_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:padding="4dp"
            android:text="@string/label_set_conversation_name"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_input_name_conversation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/label_set_conversation_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_label_set_name" />

        <Button
            android:id="@+id/btn_save_conversation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="12dp"
            android:background="@android:color/transparent"
            android:text="@string/action_save"
            android:textColor="@color/color_blue_history"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_input_name_conversation"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/btn_save_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="12dp"
            android:background="@android:color/transparent"
            android:text="@string/label_exit_cancel"
            android:textColor="#d6d6d6"
            app:layout_constraintEnd_toStartOf="@+id/btn_save_conversation"
            app:layout_constraintTop_toTopOf="@+id/btn_save_conversation" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>